--- a/lab-2/index.html
+++ b/lab-2/index.html
@@ -42,6 +42,7 @@
 		</div>
 		
 		<!-- JavaScript files needed for the game to run -->
+		<script src="js/card.js"></script>
 		<script src="js/player.js"></script>
 		<script src="js/shuffleDeck.js"></script>
 		<script type="module" src="js/main.js"></script>
