--- a/lab-2/index.html
+++ b/lab-2/index.html
@@ -24,11 +24,11 @@
 			<form id="nameForm" class="nameForm" action="#">
 				<!-- First player Input -->
 				<h2>First Player</h2>
-				<input type="text" placeholder="Enter the name of the first player" required />
+				<input name="playerOne" type="text" placeholder="Enter the name of the first player" required />
 				
 				<!-- Second Player Input -->
 				<h2>Second Player</h2>
-				<input type="text" placeholder="Enter the name of the second player" required />
+				<input name="playerTwo" type="text" placeholder="Enter the name of the second player" required />
 				<!-- spacing -->
 				<br />
 
