added the exit button to end the game and take user back to the main screen

--- a/lab-2/index.html
+++ b/lab-2/index.html
@@ -18,6 +18,12 @@
 			<a id="gameStartButton" class="gameStartButton" >Play</a>
 		</div>
 
+		<!-- Div that holds the exit button that ends the game -->
+		<div id="gameEnd" class="gameEnd">
+			<!-- button that ends the game -->
+			<a id="gameEndButton" class="gameEndButton" href="index.html">Exit</a>
+		</div>
+	  		
 		<!-- Container div that holds the form for the player names -->
 		<div id="input" class="input">
 			<!-- The form element that gets the player name input -->
@@ -45,6 +51,6 @@
 		<script src="js/card.js"></script>
 		<script src="js/player.js"></script>
 		<script src="js/shuffleDeck.js"></script>
-		<script type="module" src="js/main.js"></script>
+		<script src="js/main.js"></script>
 	</body>
 </html>
