Added all js files as scripts in the index.html page

--- a/lab-2/index.html
+++ b/lab-2/index.html
@@ -51,6 +51,11 @@
 		<script src="js/card.js"></script>
 		<script src="js/player.js"></script>
 		<script src="js/shuffleDeck.js"></script>
+		<script src="js/checkIfSet.js"></script>
+		<script src="js/dealCards.js"></script>
+		<script src="js/fillDeck.js"></script>
+		<script src="js/modifyChosenCards.js"></script>
+		<script src="js/setPresent.js"></script>
 		<script src="js/main.js"></script>
 	</body>
 </html>
