Styled the input names form and the exit button

--- a/lab-2/index.html
+++ b/lab-2/index.html
@@ -21,7 +21,7 @@
 		<!-- Div that holds the exit button that ends the game -->
 		<div id="gameEnd" class="gameEnd">
 			<!-- button that ends the game -->
-			<a id="gameEndButton" class="gameEndButton" href="index.html">Exit</a>
+			<a id="gameEndButton" class="gameEndButton" href="./">Exit</a>
 		</div>
 	  		
 		<!-- Container div that holds the form for the player names -->
