Added the next button to check if the selected cards are make a set. Added the main game logic where it check if the selected cards are a set, if they are a set it increments the score for the player and then removes the selected cards and adds new cards. If the cards selected are not a set, then it alerts the player that it is not a set and goes back to the screen for players to start selecting again. Added the functionality to stop the game after the score reaches 5. Added the html, css and the event listener for the next button.

--- a/lab-2/index.html
+++ b/lab-2/index.html
@@ -24,6 +24,12 @@
 			<a id="gameEndButton" class="gameEndButton" href="./">Exit</a>
 		</div>
 
+		<!-- Container Div that holds the next button -->
+		<div id="checkSetContainer" class="checkSetContainer">
+			<!-- The next button that checks if the cards selected by the player are a set and proceeds accordingly -->
+			<a id="checkSetButton" class="checkSetButton">Next</a>
+		</div>
+
 		<!-- Div that tells the player to press a for player 1 to select a card, and l for player 2 -->
         <div id="playerControlInstructions" class="playerControlInstructions">
             <span id="controlPlayer1Name">Player 1</span>: Press 'a' to select cards that make a set.
