Added the ending screen for the game. Added the player scores to show up while playing. Added displaying the winner when game ends.

--- a/lab-2/index.html
+++ b/lab-2/index.html
@@ -18,11 +18,28 @@
 			<a id="gameStartButton" class="gameStartButton" >Play</a>
 		</div>
 
+		<div id="scoreContainer" class="scoreContainer">
+			<h2>Score</h2>
+			<p id="player1Score"></p>
+			<p id="player2Score"></p>
+
+		</div>
+
 		<!-- Div that holds the exit button that ends the game -->
 		<div id="gameEnd" class="gameEnd">
 			<!-- button that ends the game -->
-			<a id="gameEndButton" class="gameEndButton" href="./">Exit</a>
+			<a id="gameEndButton" class="gameEndButton" href="./index.html">Exit</a>
 		</div>
+
+		<div id="gameEndingMessage" class="gameEndingMessage">
+                        <!-- game ending message -->
+                        <h2>Game has Ended</h2>
+			<p id="winnerScoreContainer"></p>
+			<p id="loserScoreContainer"></p>
+			<a id="gameStartButton" class="gameStartButton" href="./index.html">Play Again</a>
+                </div>
+
+
 
 		<!-- Container Div that holds the next button -->
 		<div id="checkSetContainer" class="checkSetContainer">
