added comments for the game end screen and player score.

--- a/lab-2/index.html
+++ b/lab-2/index.html
@@ -30,12 +30,17 @@
 			<!-- button that ends the game -->
 			<a id="gameEndButton" class="gameEndButton" href="./index.html">Exit</a>
 		</div>
-
+		
+		<!-- Div that holds the game ending message to be displayed when game ends -->
 		<div id="gameEndingMessage" class="gameEndingMessage">
                         <!-- game ending message -->
                         <h2>Game has Ended</h2>
+			
+			<!-- paragraph to hold the score of winner and loser to display when game ends -->
 			<p id="winnerScoreContainer"></p>
 			<p id="loserScoreContainer"></p>
+			
+			<!-- start game button that takes user back to play again -->
 			<a id="gameStartButton" class="gameStartButton" href="./index.html">Play Again</a>
                 </div>
 
